Cleaning code.